Manejo de encapsulamiento y atributos privados

--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
     <body>
         <h1>Programación orientada a objetos con Pokemones</h1>
 
-        <script src="Assets/JS/poo.js"></script>
+        <script src="Assets/JS/Pokedex.js"></script>
     </body>
 </html>
